--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>fullpage</title>
+    <style>
+      html{
+        width:100%;
+      }
+      body{
+        margin:0;
+        padding:0;
+        overflow: hidden;
+        width:100%;
+      }
+      #app{
+        height:100%;
+        width:100%;
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+     
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <fullpage :bgcolor="bgcolor" :pages="pages"></fullpage>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
